2006-03-17  Titus Brown  <t@issola.caltech.edu>

	* Added in Jeff Martin's ${variable} expansion patch.

	* List values can now be selected/deselected with +/-.

	* Checkboxes can now be set with True or a non-zero number, and
	  cleared with a False or '0'.

	* Switched over to using 'require success' instead of code 200
	  on some scripts.

	* Fixed a number of unknown options ;).

	* 'config' now fails on unknown options.

2006-03-15  Titus Brown  <t@issola.caltech.edu>

	* Moved utils.journey() function into TwillBrowser class as
	  _journey, refactored, simplified & eliminated _new_page()
	  method.

	* Added check_links extension module.

	* Added simple extension module documentation.

	* Added installation instructions.

2006-03-14  Titus Brown  <t@issola.caltech.edu>

	* Added list of known problems.

	* Added Web testing programs for Perl & PHP to docs.

2006-03-09  Titus Brown  <t@issola.caltech.edu>

	* Switched mechanize default encodings over to utf-8 (Terry
	  Peppers, many others!)

2006-03-06  Titus Brown  <t@issola.caltech.edu>

	* fixed twill.shell.main() so that -i flag makes interact run
	  even on failure exit.  (Kieran Holland)

	* Added setuptools entry_points magic for twill-sh script.

2006-03-05  Titus Brown  <t@issola.caltech.edu>

	* SystemExit problems in the twill shell, fixed.

	* Added 'redirect_output' and 'reset_output'. (Norman Khine)

	* Fixed memory leak in reset_browser(). (Alexander Shvedunov)

	* Increased test coverage overall to 85%.

	* Now test the shell code fairly well.

	* Cleaned up some of the stdout issues with nose.

	* fixed buggishness in shell code.

	* Made sure to close fp in tidy code.

2006-02-28  Titus Brown  <t@issola.caltech.edu>

	* runfile now allows multiple filenames properly.

2006-02-21  Titus Brown  <t@issola.caltech.edu>

	* TwillAssertionError no longer subclasses AssertionError.

	* execute_command now takes a cmdinfo argument so that line number
	  of input can be traced in errors.
